added localization flutter_loc and get storage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   get: ^4.3.8
+  get_storage: ^2.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
