--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   get: ^4.3.8
   get_storage: ^2.0.3
+  carousel_slider: 4.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -64,6 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/tajir_logo_text.png
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -76,6 +78,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Avenir
+      fonts:
+        - asset: assets/fonts/Avenir-Regular.otf
+          weight: 500
+        - asset: assets/fonts/Avenir-Light.otf
+          weight: 300
+        - asset: assets/fonts/Avenir-Black.otf
+          weight: 700
   # fonts:
   #   - family: Schyler
   #     fonts:
