--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,7 @@ flutter:
   assets:
     - assets/images/tajir_logo_text.png
     - assets/images/
-    - assets/placeholder/
+    - assets/images/placeholder/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
