--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,9 @@ dependencies:
     sdk: flutter
   get: ^4.3.8
   get_storage: ^2.0.3
-  carousel_slider: 4.0.0
-
+  carousel_slider: ^4.0.0
+  dio: ^4.0.4
+  dio_cookie_manager: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
