--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   carousel_slider: ^4.0.0
   dio: ^4.0.4
   dio_cookie_manager: ^2.0.0
+  flutter_svg: ^0.22.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -67,6 +68,7 @@ flutter:
   assets:
     - assets/images/tajir_logo_text.png
     - assets/images/
+    - assets/images/svg/
     - assets/images/placeholder/
 
   # An image asset can refer to one or more resolution-specific "variants", see
