--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   dio: ^4.0.4
   dio_cookie_manager: ^2.0.0
   flutter_svg: ^1.0.0
+  linked_scroll_controller: ^0.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
