--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dio_cookie_manager: ^2.0.0
   flutter_svg: ^1.0.0
   linked_scroll_controller: ^0.2.0
+  path_provider: ^2.0.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
